working with webserver

--- a/home/index.html
+++ b/home/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FAIDZ</title>
+    <title>real???</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <h1>HELP</h1>
+    <h2>HELP</h2>
 </body>
 
 </html>
