--- a/home/index.html
+++ b/home/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>real???</title>
-    <link href="css/style.css" rel="stylesheet">
+    <title>FAIDZ</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>HELP</h1>
-    <h2>HELP</h2>
+    <div class="hide">
+        <h1 id="faidz">FAIDZ</h1>
+    </div>
 </body>
 
 </html>
