--- a/home/index.html
+++ b/home/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <div class="hide">
-        <h1 id="faidz">FAIDZ</h1>
+    <div class='cat_image'>
+        <img src="images/me.jpg" alt="me.jpg">
     </div>
+    <!-- <div class="hide"> -->
+    <!-- <h1 id="faidz">FAIDZ</h1> -->
+    <!-- </div> -->
 </body>
 
 </html>
