--- a/home/index.html
+++ b/home/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div class='cat_image'>
-        <img src="images/me.jpg" alt="me.jpg">
+    <script src="app.js"></script>
+    <div id="repeat">
+        <p>
+            FAIDZ
+        </p>
     </div>
-    <!-- <div class="hide"> -->
-    <!-- <h1 id="faidz">FAIDZ</h1> -->
-    <!-- </div> -->
 </body>
 
 </html>
