favicon and image

--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAIDZ</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="favicon icon" href="style.css">
+    <link rel="favicon icon" href="favicon.ico">
 </head>
 
 <body>
@@ -15,6 +15,9 @@
         <p>
             FAIDZ
         </p>
+    </div>
+    <div>
+        <img src="images/test.jpg" alt="test.jpg">
     </div>
 </body>
 
