--- a/home/index.html
+++ b/home/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <script src="app.js"></script>
-    <div id="repeat">
+    <div class="repeat">
         <p>
             FAIDZ
         </p>
     </div>
-    <div>
+    <!-- <div>
         <img src="images/test.jpg" alt="test.jpg">
-    </div>
+    </div> -->
 </body>
 
 </html>
