--- a/home/index.html
+++ b/home/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <script src="app.js"></script>
-    <div class="repeat">
-        <p>
+    <div>
+        <p id="repeat">
             FAIDZ
         </p>
     </div>
