--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAIDZ</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="favicon icon" href="favicon.ico">
 </head>
 
 <body>
-    <script src="app.js"></script>
-    <div>
-        <p id="repeat">
-            FAIDZ
-        </p>
-    </div>
+    <script src="js/app.js"></script>
+    <canvas id="background"></canvas>
     <!-- <div>
         <img src="images/test.jpg" alt="test.jpg">
     </div> -->
