--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,18 @@
 
 <body>
     <script src="js/app.js"></script>
+    <svg width="100%" height="100vh" id="background-svg">
+        <defs>
+              <pattern id="pattern" x="-60" y="-10" width="93" height="30" patternUnits="userSpaceOnUse">
+                  <text x="0" y="23" id="background-text">FAIDZ</text>
+              </pattern>
+        </defs>
+        <rect id="background-rect" x="0" y="0" width="100%" height="100%" fill="url(#pattern)" />
+    </svg>
+    <!-- <div id="wip">
+        <h1>This website is currently work-in-progress</h1>
+        <h3>Please check back later</h3>
+    </div> -->
 </body>
 
 </html>
