--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAIDZ</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="favicon icon" href="favicon.ico">
 </head>
 
 <body>
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
     <svg width="100%" height="100vh" id="background-svg">
         <defs>
               <pattern id="pattern" x="-60" y="-10" width="93" height="30" patternUnits="userSpaceOnUse">
