--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAIDZ</title>
+
     <link rel="stylesheet" href="/css/style.css">
     <link rel="favicon icon" href="favicon.ico">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <script src="/js/app.js"></script>
     <svg width="100%" height="100vh" id="background-svg">
         <defs>
-              <pattern id="pattern" x="-60" y="-10" width="93" height="30" patternUnits="userSpaceOnUse">
+              <pattern id="pattern" x="-60" y="-10" width="68" height="23" patternUnits="userSpaceOnUse">
                   <text x="0" y="23" id="background-text">FAIDZ</text>
               </pattern>
         </defs>
         <rect id="background-rect" x="0" y="0" width="100%" height="100%" fill="url(#pattern)" />
     </svg>
-    <!-- <div id="wip">
-        <h1>This website is currently work-in-progress</h1>
-        <h3>Please check back later</h3>
-    </div> -->
+    <div id="wip">
+        <h1>This website is currently work-in-progress!</h1>
+        <h3>Please check back later!</h3>
+    </div>
 </body>
 
 </html>
